Fixed h4 align center

--- a/src/components/panels/invite/style.scss
+++ b/src/components/panels/invite/style.scss
@@ -18,7 +18,7 @@
    margin: 0 auto;
    border-radius:50%;
  }
- h4{
+ h4.sitter-name{
    text-align: center;
  }
 
